--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -8,26 +8,26 @@
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
 
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
+    --background: 7 11% 6%;
+    --foreground: 60 9% 97%;
 
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
+    --card: 60 9% 97%;
+    --card-foreground: 7 11% 6%;
 
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
+    --popover: 60 9% 97%;
+    --popover-foreground: 7 11% 6%;
 
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
+    --primary: 320 100% 80%;
+    --primary-foreground: 7 11% 6%;
 
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
+    --secondary: 60 9% 97%;
+    --secondary-foreground: 7 11% 6%;
 
-    --muted: 0 0% 96.1%;
+    --muted: 60 9% 97%;
     --muted-foreground: 0 0% 45.1%;
 
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
+    --accent: 320 100% 80%;
+    --accent-foreground: 7 11% 6%;
 
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -47,6 +47,8 @@
     --chart-4: 43 74% 66%;
 
     --chart-5: 27 87% 67%;
+
+    --primary-brand: #FEABEF;
   }
 
   .dark {
